PostgreSQLの自動採番に対応