@@ -16,17 +16,17 @@ import jp.dodododo.dao.dialect.MySQL;
 import jp.dodododo.dao.dialect.sqlite.SQLite;
 import jp.dodododo.dao.id.Identity;
 import jp.dodododo.dao.id.Sequence;
-import jp.dodododo.dao.log.SqlLogRegistry;
 import jp.dodododo.dao.types.TypeConverter;
-import jp.dodododo.dao.unit.DbTestRule;
+import jp.dodododo.dao.unit.DbTestExtension;
 
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.RegisterExtension;
+
 
 public class HasAliasTest {
 
-	@Rule
-	public DbTestRule dbTestRule = new DbTestRule();
+	@RegisterExtension
+	static DbTestExtension dbTestExtension = new DbTestExtension();
 
 	private Dao dao;
 
@@ -48,16 +48,16 @@ public class HasAliasTest {
 		assertEquals(empNo, select.get(0).EMPNO);
 		assertEquals("foo", select.get(0).NAME);
 		assertEquals("10", select.get(0).no);
-		assertEquals(new Integer(2), TypeConverter.convert(select.get(0).c, Integer.class));
-		assertEquals(new Integer(2), TypeConverter.convert(select.get(0).c2, Integer.class));
+		assertEquals(Integer.valueOf(2), TypeConverter.convert(select.get(0).c, Integer.class));
+		assertEquals(Integer.valueOf(2), TypeConverter.convert(select.get(0).c2, Integer.class));
 		assertNotNull(select.get(0).TSTAMP);
 	}
 
 	public static class Emp {
 
-		@Id(value = { @IdDefSet(type = Sequence.class, name = "sequence"),
-				@IdDefSet(type = Identity.class, db = SQLite.class),
-				@IdDefSet(type = Identity.class, db = MySQL.class) }, targetTables = { "emp" })
+		@Id(value = { @IdDefSet(strategy = Sequence.class, name = "sequence"),
+				@IdDefSet(strategy = Identity.class, db = SQLite.class),
+				@IdDefSet(strategy = Identity.class, db = MySQL.class) }, targetTables = { "emp" })
 		public String EMPNO;
 
 		public String JOB;
@@ -104,6 +104,6 @@ public class HasAliasTest {
 	}
 
 	private DataSource getDataSource() {
-		return dbTestRule.getDataSource();
+		return dbTestExtension.getDataSource();
 	}
 }
