@@ -20,21 +20,19 @@ import jp.dodododo.dao.impl.Dept;
 import jp.dodododo.dao.lazyloading.LazyLoadingProxy;
 import jp.dodododo.dao.log.SqlLogRegistry;
 import jp.dodododo.dao.types.TypeConverter;
-import jp.dodododo.dao.unit.DbTestRule;
+import jp.dodododo.dao.unit.DbTestExtension;
 
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.RegisterExtension;
 
 public class ProxyPropertyTest {
 
-	@Rule
-	public DbTestRule dbTestRule = new DbTestRule();
-
-	private Dao dao;
+	@RegisterExtension
+	static DbTestExtension dbTestExtension = new DbTestExtension();
 
 	@Test
 	public void testInsertAndSelect() {
-		dao = newTestDao(dbTestRule.getDataSource());
+		Dao dao = newTestDao(dbTestExtension.getDataSource());
 		DeptProxy.dao = dao;
 		SqlLogRegistry logRegistry = dao.getSqlLogRegistry();
 
@@ -55,19 +53,19 @@ public class ProxyPropertyTest {
 				+ empNo + " order by EMPNO";
 		List<Emp> select = dao.select(sql, Emp.class);
 		assertEquals(empNo, select.get(0).EMPNO);
-		assertEquals(new Integer(2), TypeConverter.convert(select.get(0).COMM, Integer.class));
+		assertEquals(Integer.valueOf(2), TypeConverter.convert(select.get(0).COMM, Integer.class));
 		assertEquals("ename", select.get(0).NAME);
 		assertNotNull(select.get(0).TSTAMP);
 
 		assertEquals(sql, logRegistry.getLast().getCompleteSql());
 		assertEquals("10", select.get(0).dept.getDEPTNO());
-		assertEqualsIgnoreCase("select * from dept where deptno =10", logRegistry.getLast().getCompleteSql());
+		assertEqualsIgnoreCase("select * from dept where deptno = 10", logRegistry.getLast().getCompleteSql());
 	}
 
 	public static class Emp {
-		@Id(value = { @IdDefSet(type = Sequence.class, name = "sequence"),
-				@IdDefSet(type = Identity.class, db = SQLite.class),
-				@IdDefSet(type = Identity.class, db = MySQL.class) },
+		@Id(value = { @IdDefSet(strategy = Sequence.class, name = "sequence"),
+				@IdDefSet(strategy = Identity.class, db = SQLite.class),
+				@IdDefSet(strategy = Identity.class, db = MySQL.class) },
 				targetTables = { "emp" })
 		public String EMPNO;
 
@@ -109,7 +107,7 @@ public class ProxyPropertyTest {
 
 	    @Override
 		public Dept lazyLoad() {
-			return DeptProxy.dao.selectOne("select * from DEPT where deptno =" + DEPTNO, Dept.class).get();
+			return DeptProxy.dao.selectOne("select * from DEPT where deptno = " + DEPTNO, Dept.class).orElse(null);
 		}
 
 	    @Override
@@ -165,7 +163,7 @@ public class ProxyPropertyTest {
 			return real().toString();
 		}
 
-		@Override
+        @Override
 		public boolean equals(Object o) {
 			return real().equals(o);
 		}
