@@ -19,22 +19,22 @@ import jp.dodododo.dao.id.Identity;
 import jp.dodododo.dao.id.Sequence;
 import jp.dodododo.dao.log.SqlLogRegistry;
 import jp.dodododo.dao.row.Row;
-import jp.dodododo.dao.unit.DbTestRule;
+import jp.dodododo.dao.unit.DbTestExtension;
 
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.RegisterExtension;
 
 public class SelectRowTest {
 
-	@Rule
-	public DbTestRule dbTestRule = new DbTestRule();
+	@RegisterExtension
+	static DbTestExtension dbTestExtension = new DbTestExtension();
 
 	private Dao dao;
 
 
 	@Test
 	public void testInsertAndSelect() {
-		dao = newTestDao(dbTestRule.getDataSource());
+		dao = newTestDao(dbTestExtension.getDataSource());
 		SqlLogRegistry logRegistry = dao.getSqlLogRegistry();
 		Emp emp = new Emp();
 		emp.COMM = "2";
@@ -50,7 +50,7 @@ public class SelectRowTest {
 		assertEqualsIgnoreCase("SELECT * FROM emp WHERE empno = "+ empNo, logRegistry.getLast().getCompleteSql());
 		assertEquals(empNo, select.get(0).getInteger("EMPNO"));
 		assertEquals("" + empNo, select.get(0).getString("EMPNO"));
-		assertEquals(new Integer(2), select.get(0).getInteger("COMM"));
+		assertEquals(Integer.valueOf(2), select.get(0).getInteger("COMM"));
 		assertEquals("ename", select.get(0).getString("ENAME"));
 		assertNotNull(select.get(0).getString("TSTAMP"));
 
@@ -58,14 +58,14 @@ public class SelectRowTest {
 		assertEqualsIgnoreCase("SELECT * FROM EMP WHERE EMPNO = "+ empNo, logRegistry.getLast().getCompleteSql());
 		assertEquals(empNo, select.get(0).getInteger("EMPNO"));
 		assertEquals("" + empNo, select.get(0).getString("EMPNO"));
-		assertEquals(new Integer(2), select.get(0).getInteger("COMM"));
+		assertEquals(Integer.valueOf(2), select.get(0).getInteger("COMM"));
 		assertEquals("ename", select.get(0).getString("ENAME"));
 		assertNotNull(select.get(0).getString("TSTAMP"));
 	}
 
 	public static class Emp {
-		@Id(value = { @IdDefSet(type = Sequence.class, name = "sequence"), @IdDefSet(type = Identity.class, db = SQLite.class),
-				@IdDefSet(type = Identity.class, db = MySQL.class) }, targetTables = { "EMP" })
+		@Id(value = { @IdDefSet(strategy = Sequence.class, name = "sequence"), @IdDefSet(strategy = Identity.class, db = SQLite.class),
+				@IdDefSet(strategy = Identity.class, db = MySQL.class) }, targetTables = { "EMP" })
 		public String EMPNO;
 
 		@Column("ename")
