@@ -14,23 +14,22 @@ import jp.dodododo.dao.dialect.MySQL;
 import jp.dodododo.dao.dialect.sqlite.SQLite;
 import jp.dodododo.dao.id.Identity;
 import jp.dodododo.dao.id.Sequence;
-import jp.dodododo.dao.log.SqlLogRegistry;
 import jp.dodododo.dao.types.TypeConverter;
-import jp.dodododo.dao.unit.DbTestRule;
+import jp.dodododo.dao.unit.DbTestExtension;
 
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.RegisterExtension;
 
 public class SomeObjectTest {
 
-	@Rule
-	public DbTestRule dbTestRule = new DbTestRule();
+	@RegisterExtension
+	static DbTestExtension dbTestExtension = new DbTestExtension();
 
 	private Dao dao;
 
 	@Test
 	public void testInsertAndSelect() {
-		dao = newTestDao(dbTestRule.getDataSource());
+		dao = newTestDao(dbTestExtension.getDataSource());
 		Emp emp = new Emp();
 		emp.dept = new Dept();
 		emp.dept.DEPTNO = "10";
@@ -46,7 +45,7 @@ public class SomeObjectTest {
 
 		List<Emp> select = dao.select("select * from EMP where EMPNO =" + empNo, Emp.class);
 		assertEquals(empNo, select.get(0).no.EMPNO);
-		assertEquals(new Integer(2), TypeConverter.convert(select.get(0).COMM, Integer.class));
+		assertEquals(Integer.valueOf(2), TypeConverter.convert(select.get(0).COMM, Integer.class));
 		assertEquals("10", select.get(0).dept.DEPTNO);
 		assertEquals("ename", select.get(0).person.NAME);
 		assertNotNull(select.get(0).person.TSTAMP);
@@ -74,9 +73,9 @@ public class SomeObjectTest {
 	}
 
 	public static class Empno {
-		@Id(value = { @IdDefSet(type = Sequence.class, name = "sequence"),
-				@IdDefSet(type = Identity.class, db = SQLite.class),
-				@IdDefSet(type = Identity.class, db = MySQL.class),
+		@Id(value = { @IdDefSet(strategy = Sequence.class, name = "sequence"),
+				@IdDefSet(strategy = Identity.class, db = SQLite.class),
+				@IdDefSet(strategy = Identity.class, db = MySQL.class),
 				}, targetTables = { "emp" })
 		public String EMPNO;
 	}
